codex-rs/tui2/src/status/snapshots/codex_tui2__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui2/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ Azure Codex (v0.0.0)                                          │
│                                                                   │
│  Model:            gpt-5.1-codex (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                         │
│  Approval:         on-request                                     │
│  Sandbox:          read-only                                      │
│  Agents.md:        <none>                                         │
│                                                                   │
│  Token usage:      2K total  (1.4K input + 600 output)            │
│  Context window:   100% left (2.2K used / 272K)                   │
│  5h limit:         [███████████░░░░░░░░░] 55% left (resets 09:25) │
│  Weekly limit:     [██████████████░░░░░░] 70% left (resets 09:55) │
│  Credits:          38 credits                                     │
╰───────────────────────────────────────────────────────────────────╯
